objects/EngagementInteraction.object
<CustomObject>
    <fields>
        <fullName>Engagement_Title__c</fullName>
        <label>Engagement Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Used to describe the type of event that was scheduled</description>
        <inlineHelpText>Used to describe the type of event that was scheduled</inlineHelpText>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service Appointment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Friendly_URL_Text__c</fullName>
        <description>This is the text that gets used in the Interaction URL hyperlink</description>
        <label>Friendly URL Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_URL__c</fullName>
        <label>Interaction URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Related_Task_URL__c</fullName>
        <description>This formula gets its values from the engagement Interaction flows</description>
        <formula>HYPERLINK( Interaction_URL__c , Friendly_URL_Text__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Record Link</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_EngagementInteractions</fullName>
        <filterScope>Everything</filterScope>
        <label>All Engagement Interactions</label>
    </listViews>
    <listViews>
        <fullName>My_EngagementInteractions</fullName>
        <filterScope>Mine</filterScope>
        <label>My Engagement Interactions</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>